[package]
name = "opendrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
uom = { version = "0.32.0", features = ["serde", "f64"] }

xml-rs = "0.8"
derive_more = "0.99.17"
thiserror = "1.0.30"

arbitrary = { version = "1.1.0", optional = true, features = ["derive"] }

[features]
fuzzing = ["arbitrary"]