[package]
name = "opendrive"
version = "1.7.0+0.1.0" # ASAM OpenDRIVE Version + crate version (<version core> + <build> https://semver.org/)
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
uom = { version = "0.32.0", features = ["serde", "f64"] }
vec1 = "1.8.0"
paste = "1.0.7"

xml-rs = "0.8"
derive_more = "0.99.17"
thiserror = "1.0.30"
backtrace = "0.3.64"

arbitrary = { version = "1.1.0", optional = true, features = ["derive"] }

[features]
fuzzing = ["arbitrary"]
workaround-sumo = ["workaround-sumo-issue-10301"]

# SUMO ISSUE: `paramPoly3.pRange` missing in OpenDRIVE export
# WORKAROUND: assume `ParamPoly3pRange::Normalized`
# https://github.com/eclipse/sumo/issues/10301
workaround-sumo-issue-10301 = []